--- a/me-gusta.html
+++ b/me-gusta.html
@@ -31,7 +31,7 @@
                     <div class="likes">
                         <p id="like1">0</p>
                         <p>like(s)</p>
-                        <button class="btn1">Like</button>
+                        <button class="btn1" onclick="likeOne()">Like</button>
                     </div>
                 </div>
 
@@ -44,7 +44,7 @@
                     <div class="likes">
                         <p id="like2">0</p>
                         <p>like(s)</p>
-                        <button class="btn2">Like</button>
+                        <button class="btn2" onclick="likeTwo()">Like</button>
                     </div>
                 </div>
 
@@ -57,7 +57,7 @@
                     <div class="likes">
                         <p id="like3">0</p>
                         <p>like(s)</p>
-                        <button class="btn3">Like</button>
+                        <button class="btn3" onclick="likeThree()">Like</button>
                     </div>
                 </div>
             </div>
